2010-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-next-sexp): Break inf-loop at BOB.
	(smie-backward-sexp, smie-forward-sexp): Remove boundary condition now
	handled in smie-next-sexp.
	(smie-indent-calculate): Provide a starting indentation (so the
	recursion is well-founded ;-).

	Fix handling of non-associative equal levels.
	* emacs-lisp/smie.el (smie-prec2-levels): Choose distinct levels even
	when it's not needed.
	(smie-op-left, smie-op-right): New functions.
	(smie-next-sexp): New function, extracted from smie-backward-sexp.
	Better handle equal levels to distinguish the associative case from
	the "multi-keyword construct" case.
	(smie-backward-sexp, smie-forward-sexp): Use it.

2010-05-18  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/prolog.el (smie-indent-basic): Declare for byte-compiler.

	* emacs-lisp/smie.el (smie-precs-precedence-table, smie-backward-sexp)
	(smie-forward-sexp, smie-indent-calculate): Fix typos in docstrings.

2010-05-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	Provide a simple generic indentation engine and use it for Prolog.
	* emacs-lisp/smie.el: New file.
	* progmodes/prolog.el (prolog-smie-op-levels)
	(prolog-smie-indent-rules): New var.
	(prolog-mode-variables): Use them to configure SMIE.
	(prolog-indent-line, prolog-indent-level): Remove.

2010-05-17  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-vec.el (math-vector-avg): Put the vector elements in
	order before computing the averages.

2010-05-16  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-vec.el (calc-histogram):
	(calcFunc-histogram): Allow vectors as inputs.
	(math-vector-avg): New function.

	* calc/calc-ext.el (math-group-float): Have the number of digits
	being grouped depend on the radix (Bug#6189).

2010-05-15  Ken Raeburn  <raeburn@raeburn.org>

	* version.el (emacs-copyright, emacs-version): Don't define here,
	now that emacs.c defines it.

2010-05-15  Eli Zaretskii  <eliz@gnu.org>
